# advent-of-code

./: .gitignore  Pipfile  aoc_template.py  pyproject.toml  requirements.txt  test_aoc_template.py
2023/01_trebuchet/: aoc_2023_01.py  test_aoc_2023_01.py
2023/02_cube_conundrum/: aoc_2023_02.py  test_aoc_2023_02.py
2023/03_gear_ratios/: aoc_2023_03.py  test_aoc_2023_03.py
src/advent_of_code/2023/02_cube_conundrum/: aoc_2023_02.py
src/advent_of_code/2023/03_gear_ratios/: aoc_2023_03.py  test_aoc_2023_03.py
src/advent_of_code/templates/: aoc_template.py  test_aoc_template.py
src/advent_of_code/utils/: parsers.py
src/advent_of_code/y2023/d01_trebuchet/: aoc_2023_01.py  test_aoc_2023_01.py
src/advent_of_code/y2023/d02_cube_conundrum/: aoc_2023_02.py  test_aoc_2023_02.py  types.py
src/advent_of_code/y2023/d03_gear_ratios/: aoc_2023_03.py  test_aoc_2023_03.py  types.py
src/advent_of_code/y2023/d04_scratchcards/: aoc_2023_04.py  parsers.py  test_aoc_2023_04.py  types.py
src/advent_of_code/y2023/d05_if_you_give_a_seed_a_fertilizer/: aoc_2023_05.py  test_aoc_2023_05.py  types.py
