[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Vincent Ging Ho Yim <cenviity@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
